Add helper to check if file is (really) writable (on Windows)

The helper temporarily enables the (expensive) NTFS permissions check
when checking whether the file (or directory) is writable.

GnuPG-bug-id: 6499
(cherry picked from commit 50477d05a8cbf797c515de23bf2e121c6614c4ad)