src/utils/path-helper.cpp
@@ -26,6 +26,10 @@
 
 #include <algorithm>
 
+#ifdef Q_OS_WIN
+extern Q_CORE_EXPORT int qt_ntfs_permission_lookup;
+#endif
+
 using namespace Kleo;
 
 static QString commonPrefix(const QString &s1, const QString &s2)
@@ -101,6 +105,41 @@ QString Kleo::stripSuffix(const QString &fileName)
 {
     const QFileInfo fi(fileName);
     return fi.dir().filePath(fi.completeBaseName());
+}
+
+#ifdef Q_OS_WIN
+namespace
+{
+class NTFSPermissionsCheck
+{
+public:
+    NTFSPermissionsCheck()
+    {
+        // enable the NTFS permissions check
+        qt_ntfs_permission_lookup++;
+        qCDebug(KLEOPATRA_LOG) << __func__ << "NTFS permissions check" << (qt_ntfs_permission_lookup ? "enabled" : "disabled");
+    }
+
+    ~NTFSPermissionsCheck()
+    {
+        // disable the NTFS permissions check
+        qt_ntfs_permission_lookup--;
+        qCDebug(KLEOPATRA_LOG) << __func__ << "NTFS permissions check" << (qt_ntfs_permission_lookup ? "enabled" : "disabled");
+    }
+};
+}
+#endif
+
+bool Kleo::isWritable(const QFileInfo &fi)
+{
+#ifdef Q_OS_WIN
+    NTFSPermissionsCheck withExpensiveNTFSPermissionsCheck;
+    const auto result = fi.isWritable();
+    qCDebug(KLEOPATRA_LOG) << __func__ << fi.absoluteFilePath() << (result ? "is writable" : "is not writable");
+    return result;
+#else
+    return fi.isWritable();
+#endif
 }
 
 #ifdef Q_OS_WIN
