src/utils/path-helper.h
@@ -14,6 +14,7 @@
 class QString;
 #include <QStringList>
 class QDir;
+class QFileInfo;
 
 namespace Kleo
 {
@@ -22,6 +23,15 @@ QString heuristicBaseDirectory(const QStringList &files);
 QStringList makeRelativeTo(const QDir &dir, const QStringList &files);
 QStringList makeRelativeTo(const QString &dir, const QStringList &files);
 QString stripSuffix(const QString &fileName);
+
+/**
+ * Checks if the file/directory referenced by \p fi is writable.
+ *
+ * On Windows, this enables the NTFS permissions check which is an expensive
+ * operation. Only use this in the main thread.
+ * \sa QFileInfo::isWritable
+ */
+bool isWritable(const QFileInfo &fi);
 
 #ifdef Q_OS_WIN
 void recursivelyRemovePath(const QString &path);
